syntax = "proto2";
import "domain_data.proto";

package task;

message Any {
  required string type_url = 1; // in quick-protobuf, it is PATH, in prost, it is type_url https://github.com/tokio-rs/prost/issues/299
  required bytes value = 2;
}

// Job containing a list of tasks
message JobRequest {
    required string name = 1;
    repeated TaskRequest tasks = 2;
    required string nonce = 3;
}

message Job {
  required string id = 1;
  required string name = 2;
  repeated Task tasks = 3;
}

enum Code {
    OK = 200;
    Created = 201;
    Accepted = 202;
    BadRequest = 400; 
}

message SubmitJobResponse {
    required Code code = 1;
    required string job_id = 2;
    required string err_msg = 3;
}

// Task definition
message TaskRequest {
    required string name = 1;
    required CapabilityFilters capability_filters = 2;
    optional uint64 max_budget = 3;
    required string timeout = 4;
    repeated string needs = 5; // List of dependent task names
    required ResourceRecruitment resource_recruitment = 6;
    required string sender = 7;
    optional string receiver = 8;
    optional Any data = 9;
}

// Filters for task capabilities
message CapabilityFilters {
    required string endpoint = 1;
    optional int32 min_gpu = 2;
    optional int32 min_cpu = 3; // Optional, for tasks that need CPU
}

// Resource recruitment policies
message ResourceRecruitment {
    enum RecruitmentPolicy {
        ALWAYS = 0;         // "Always (recruit if not present or busy)"
        IF_NOT_PRESENT = 1; // "IfNotPresent (recruit if not present)"
        NEVER = 2;          // "Never (only re-use existing node, wait if busy)"
        FAIL = 3;           // "Fail (don't create job if there's no existing node)"
    }
    required RecruitmentPolicy recruitment_policy = 1;

    enum TerminationPolicy {
        KEEP = 0;       // "Keep"
        TERMINATE = 1;  // "Terminate"
    }
    required TerminationPolicy termination_policy = 2;
}

message ConsumeDataInputV1 {
  required domain_data.Query query = 1;
  required bool keep_alive = 2;
}

message StoreDataOutputV1 {
  repeated string ids = 1;
}

message LocalRefinementOutputV1 {
  repeated string result_ids = 1;
}

enum Status {
    PENDING = 0;
    STARTED = 1;
    DONE = 2;
    FAILED = 3;
    WAITING_FOR_RESOURCE = 4;
    RETRY = 5;
    PROCESSING = 6;
}

message Task {
  required string name = 2;
  optional string receiver = 3;
  required string endpoint = 4;
  optional string access_token = 5;
  required string job_id = 6;
  required string sender = 7;
  required Status status = 9;
  optional Any output = 10;
}

message LocalRefinementInputV1 {
  required domain_data.Query query = 1;
}

message DomainClusterHandshake {
  required string access_token = 1;
}

message GlobalRefinementInputV1 {
  repeated LocalRefinementOutputV1 local_refinement_results = 1; 
}

message Error {
  required string message = 1;
}

message TaskHandler {
    required Task task = 1;
    map<string, bool> dependencies = 2;
    required string job_id = 3;
    required string err_msg = 4;
    required uint32 retries = 5;
    required uint64 updated_at = 6;
    required uint64 created_at = 7;
}
